<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="about_category_title">About</string>
    <string name="advanced_category_title">Advanced</string>
    <string name="audio_and_language_category_title">Audio &amp; language</string>
    <string name="bias_custom_name_title">Vibrate when name is spoken</string>
    <string name="bias_custom_word_title">Custom words</string>
    <string name="braille_mode">Braille mode</string>
    <string name="braille_mode_summary">Provides better braille experience</string>
    <string name="broadcast_mode_title">Broadcast mode</string>
    <string name="built_in_mic_name">"This device's mic"</string>
    <string name="compress_audio_summary">May save data usage, but lose quality.</string>
    <string name="compress_audio_title">Compress audio</string>
    <string name="contact_us">Contact us</string>
    <string name="contributors_description">Google gratefully acknowledges the help of Gallaudet University</string>
    <string name="delete_history_title">Delete history</string>
    <string name="dolphin_custom_sounds_detection_mode_title">Custom sounds detection mode</string>
    <string name="dolphin_custom_sounds_summary">Get notified when your appliances beep</string>
    <string name="dolphin_custom_sounds_title">Custom sounds</string>
    <string name="dolphin_display_category_title">Display</string>
    <string name="dolphin_notification_category_summary_of_custom_sounds">"Sounds that you've saved"</string>
    <string name="dolphin_notification_category_summary_of_emergency">Smoke alarms, fire alarms, and more</string>
    <string name="dolphin_notification_category_summary_of_others">Microwave beeping, water running, and more</string>
    <string name="dolphin_notification_group_title_of_emergency">Emergency</string>
    <string name="dolphin_notification_group_title_of_others">Appliances and other</string>
    <string name="dolphin_notification_group_title_of_priority">Priority</string>
    <string name="dolphin_notification_intro_vibration">Your device can vibrate when these sounds are detected</string>
    <string name="dolphin_notification_preference_title">Ways to be notified</string>
    <string name="dolphin_notification_priority_category_summary">Baby sounds, dog barking, and more</string>
    <string name="dolphin_preference_summary_open_live_transcribe">"Transcribe what's happening after a sound is detected"</string>
    <string name="dolphin_preference_title_open_live_transcribe">Open Live Transcribe</string>
    <string name="dolphin_preference_title_show_app_icon">Show icon in the app list</string>
    <string name="dolphin_preferences_category_title">Preferences</string>
    <string name="dolphin_sound_event_alarm">Smoke and fire alarms</string>
    <string name="dolphin_sound_event_appliances_bleeping">Appliance beeping</string>
    <string name="dolphin_sound_event_baby_sounds">Baby sounds</string>
    <string name="dolphin_sound_event_dog">Dog barking</string>
    <string name="dolphin_sound_event_doorbell">Doorbell ringing</string>
    <string name="dolphin_sound_event_knock">Knocking</string>
    <string name="dolphin_sound_event_siren">Sirens</string>
    <string name="dolphin_sound_event_telephone_bell_ringing">Landline phone ringing</string>
    <string name="dolphin_sound_event_water">Water running</string>
    <string name="dolphin_sound_type_intro">Get notified about the sounds that matter to you</string>
    <string name="dolphin_sound_types_preference_title">Sound types</string>
    <string name="dolphin_support_category_title">Support</string>
    <string name="dolphin_transcription_category_title">Transcription</string>
    <string name="dolphin_try_demo_preference_title">Try a demo</string>
    <string name="dolphin_usage_try_a_demo_message">See what happens when your device recognizes a sound</string>
    <string name="downloaded_languages_settings_title">Offline transcriptions</string>
    <string name="enable_audio_gemini_asr">Enable Audio Gemini for ASR</string>
    <string name="events_category_title">Events</string>
    <string name="experimental_category_title">Experiments</string>
    <string name="export_all_transcription">Export all stored transcription</string>
    <string name="filter_unstable_text_summary">Filters unstable text for online transcription.</string>
    <string name="filter_unstable_text_title">Filter unstable text</string>
    <string name="hide_profanity">Hide profanity</string>
    <string name="line_break_style_title">Line breaks style</string>
    <string name="more_options_title">More settings</string>
    <string name="open_dolphin_settings_description">Get notified about important sounds</string>
    <string name="open_dolphin_settings_title">Open Sound Notifications</string>
    <string name="open_source_licenses_title">Open source licenses</string>
    <string name="pref_audio_input">pref_audio_input</string>
    <string name="pref_bias_custom_name">pref_bias_custom_name</string>
    <string name="pref_bias_custom_word">pref_bias_custom_word</string>
    <string name="pref_braille_mode">pref_braille_mode</string>
    <string name="pref_broadcast_mode">pref_broadcast_mode</string>
    <string name="pref_category_audio_and_language">audio_and_language_category</string>
    <string name="pref_category_display">pref_category_display</string>
    <string name="pref_category_mode">pref_category_mode</string>
    <string name="pref_category_preferences">pref_category_preferences</string>
    <string name="pref_category_support">pref_category_support</string>
    <string name="pref_compress_audio">pref_compress_audio</string>
    <string name="pref_compress_audio_opus_32kbps">pref_compress_audio_opus_32kbps</string>
    <string name="pref_contact_us">pref_contact_us</string>
    <string name="pref_contributors_description">pref_contributors_description</string>
    <string name="pref_custom_sounds">pref_custom_sounds</string>
    <string name="pref_custom_sounds_detection_mode">pref_custom_sounds_detection_mode</string>
    <string name="pref_custom_sounds_vibration">pref_custom_sounds_vibration</string>
    <string name="pref_delete_history">pref_delete_history</string>
    <string name="pref_detect_alarm">ALARM</string>
    <string name="pref_detect_baby_cry">BABY_CRY_OR_INFANT_CRY</string>
    <string name="pref_detect_beep">BEEP_OR_BLEEP</string>
    <string name="pref_detect_dog">DOG</string>
    <string name="pref_detect_doorbell">DOORBELL</string>
    <string name="pref_detect_knock">KNOCK</string>
    <string name="pref_detect_landline_phone_ring">TELEPHONE</string>
    <string name="pref_detect_siren">SIREN</string>
    <string name="pref_detect_water">WATER</string>
    <string name="pref_emergency_vibration">pref_emergency_vibration</string>
    <string name="pref_enable_audio_gemini_asr">pref_enable_audio_gemini_asr</string>
    <string name="pref_experimental_category">pref_experimental_category</string>
    <string name="pref_export_all_transcription">pref_export_all_transcription</string>
    <string name="pref_filter_unstable_text">pref_filter_unstable_text</string>
    <string name="pref_go_to_scribe">pref_go_to_scribe</string>
    <string name="pref_hide_profanity">pref_hide_profanity</string>
    <string name="pref_line_break_none">pref_line_break_none</string>
    <string name="pref_line_break_style">pref_line_break_style</string>
    <string name="pref_more_options">pref_more_options</string>
    <string name="pref_notification_settings_preferences">pref_notification_settings_preferences</string>
    <string name="pref_offline_transcription">pref_offline_transcription</string>
    <string name="pref_open_dolphin_page">pref_open_dolphin_launcher</string>
    <string name="pref_open_source_licenses">pref_open_source_licenses</string>
    <string name="pref_others_vibration">pref_others_vibration</string>
    <string name="pref_preference_category_emergency">pref_preference_category_emergency</string>
    <string name="pref_preference_category_others">pref_preference_category_others</string>
    <string name="pref_preference_category_priority">pref_preference_category_priority</string>
    <string name="pref_priority_vibration">pref_priority_vibration</string>
    <string name="pref_quick_settings">pref_quick_settings</string>
    <string name="pref_saving">pref_saving_category</string>
    <string name="pref_screen_notification_settings_vibration">pref_screen_notification_settings_vibration</string>
    <string name="pref_send_feedback">pref_send_feedback</string>
    <string name="pref_show_app_icon">pref_show_app_icon</string>
    <string name="pref_show_dolphin_app_icon">pref_show_dolphin_app_icon</string>
    <string name="pref_show_hold_button">pref_show_hold_button</string>
    <string name="pref_smart_segment">pref_smart_segment</string>
    <string name="pref_sound_events">pref_sound_events</string>
    <string name="pref_sound_type_intro">pref_sound_type_intro</string>
    <string name="pref_sound_types">pref_sound_types</string>
    <string name="pref_speaker_diarization">pref_speaker_diarization</string>
    <string name="pref_speaker_diarization_style">pref_speaker_diarization_style</string>
    <string name="pref_speaker_diarization_style_none">pref_speaker_diarization_style_none</string>
    <string name="pref_stable_text_strategy">pref_stable_text_strategy</string>
    <string name="pref_stable_text_strategy_stable">Stable</string>
    <string name="pref_system_default_theme">pref_system_default_theme</string>
    <string name="pref_text_size_screen">text_size_preference_screen</string>
    <string name="pref_theme_options">pref_theme_options</string>
    <string name="pref_transcription_history">pref_transcription_history</string>
    <string name="pref_try_demo">pref_try_demo</string>
    <string name="pref_tts_voice">pref_tts_voice</string>
    <string name="pref_vibrate_switch">pref_vibrate_switch</string>
    <string name="pref_vibro_integration">pref_vibro_integration</string>
    <string name="preferred_microphone_title">Microphone</string>
    <string name="saving_category_title">Saving</string>
    <string name="send_feedback">Send feedback</string>
    <string name="show_app_icon">Show icon in the app list</string>
    <string name="show_hold_button">Show hold button</string>
    <string name="show_hold_button_summary">Pause transcription so you can catch up on your reading</string>
    <string name="smart_segment">Smart segment</string>
    <string name="smart_segment_summary">Segment transcript based on performance (rather than text length)</string>
    <string name="sound_events_summary">Includes sounds like laughter, applause, and music</string>
    <string name="sound_events_title">Show sound labels</string>
    <string name="speaker_diarization_style_title">Speaker diarization style</string>
    <string name="speaker_diarization_title">Enable speaker diarization</string>
    <string name="stable_text_strategy_summary">Different strategies to make displayed text more stable.</string>
    <string name="stable_text_strategy_title">Stable text</string>
    <string name="text_display_category_title">Display</string>
    <string name="text_size_and_color_title">Text size</string>
    <string name="theme_options_title">Theme</string>
    <string name="transcription_history_title">Transcription history</string>
    <string name="tts_settings_title">Voice for typed responses</string>
    <string name="vibrate_notification">Vibrate when speech resumes</string>
    <string name="vibrate_summary">Phone vibrates when someone starts speaking after a pause of at least 10 seconds</string>
    <string name="vibro_integration">Send sound events to Vibro</string>
</resources>