<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    android:key="@string/pref_screen_notification_settings_vibration"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        android:selectable="false"
        android:summary="@string/dolphin_notification_intro_vibration"
        app:iconSpaceReserved="false" />
    <com.google.audio.hearing.visualization.accessibility.dolphin.common.ui.widget.SwitchPreferenceWithContentDescription
        android:title="@string/dolphin_notification_group_title_of_emergency"
        android:key="@string/pref_emergency_vibration"
        android:summary="@string/dolphin_notification_category_summary_of_emergency"
        android:defaultValue="@bool/pref_default_emergency_vibration"
        app:iconSpaceReserved="false" />
    <com.google.audio.hearing.visualization.accessibility.dolphin.common.ui.widget.SwitchPreferenceWithContentDescription
        android:title="@string/dolphin_notification_group_title_of_priority"
        android:key="@string/pref_priority_vibration"
        android:summary="@string/dolphin_notification_priority_category_summary"
        android:defaultValue="@bool/pref_default_priority_vibration"
        app:iconSpaceReserved="false" />
    <com.google.audio.hearing.visualization.accessibility.dolphin.common.ui.widget.SwitchPreferenceWithContentDescription
        android:title="@string/dolphin_notification_group_title_of_others"
        android:key="@string/pref_others_vibration"
        android:summary="@string/dolphin_notification_category_summary_of_others"
        android:defaultValue="@bool/pref_default_others_vibration"
        app:iconSpaceReserved="false" />
    <com.google.audio.hearing.visualization.accessibility.dolphin.common.ui.widget.SwitchPreferenceWithContentDescription
        android:title="@string/dolphin_custom_sounds_title"
        android:key="@string/pref_custom_sounds_vibration"
        android:summary="@string/dolphin_notification_category_summary_of_custom_sounds"
        android:defaultValue="@bool/pref_default_custom_sounds_vibration"
        app:iconSpaceReserved="false" />
</PreferenceScreen>